--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "src/js/vendor/sly"]
 	path = src/js/vendor/sly
 	url = https://github.com/darsain/sly.git
+[submodule "src/js/vendor/coverflow"]
+	path = src/js/vendor/coverflow
+	url = https://github.com/vanderlee/coverflow.git
